🐛 Fix all members not showing

--- a/template/scss/_members.scss
+++ b/template/scss/_members.scss
@@ -1,6 +1,6 @@
 section.members {
     padding-top: 3em;
-    padding-bottom: 2.5em;
+    padding-bottom: 4em;
     text-align: left;
     background-color: rgba(56, 64, 75, 0.4);
 
